<resources>
    <string name="app_name">VirtualDataBooks</string>
    <string name="loginTitle">Data Buku Induk Siswa\nSMKN 2 Singosari</string>
    <string name="loginPrimaryButton">Masuk Sebagai Siswa</string>
    <string name="loginSecondaryButton">Masuk Sebagai Admin</string>
    <string name="content">content</string>
    <string name="loginSubtitle">Buku Induk Virtual\nAkses Data Dengan Mudah</string>
    <string name="loginFormTitle">Masuk</string>
    <string name="loginFormSubtitleStudent">Masukkan NISN dan Tanggal Lahir untuk Login</string>
    <string name="loginFormSubtitleAdmin">Masukkan Username dan Password untuk Login</string>
    <string name="loginFormButton">Lanjut</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleFormOTP">Masukkan kode OTP</string>
    <string name="subtitleFormOTP">Kami telah mengirimkan kode OTP ke email Anda.</string>
    <string name="customSnackbarTitle">Apakah Ada Data Pribadimu\nYang Salah?</string>
    <string name="SelectedForm">Pilih Form</string>
    <string name="backButtonDetailedMajor">Kembali</string>
    <string name="cardPrimaryDescription">Permintaan perubahan Biodata!\nPeriksa Permintaan Perubahan!</string>
    <string-array name="spinner_items">
        <item>Pilih Form</item>
        <item>Biodata</item>
        <item>Alamat</item>
        <item>Kesehatan</item>
        <item>Pendidikan</item>
        <item>Keterangan Ayah</item>
        <item>Keterangan Ibu</item>
        <item>Keterangan Wali</item>
        <item>Perkembangan Siswa</item>
        <item>Setelah Lulus</item>
        <item>Hobi</item>
    </string-array>
</resources>