<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="184dp"
        android:layout_height="184dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/loginTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/logo_foreground"
        android:contentDescription="@string/content"/>

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginTitle"
        android:textAlignment="center"
        android:textSize="24sp"
        android:fontFamily="@font/coolvetica_rg"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPrimary"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/white"
        android:text="@string/loginPrimaryButton"
        android:textColor="@color/primaryButtonText"
        app:cornerRadius="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSecondary"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/secondaryButtonTint"
        android:text="@string/loginSecondaryButton"
        android:textColor="@color/white"
        app:cornerRadius="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <TextView
        android:id="@+id/loginSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/loginSubtitle"
        android:textAlignment="center"
        android:fontFamily="@font/coolvetica_rg"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>